@@ -2,6 +2,7 @@
  - Add edition number use case.
  - Add publisher place use case.
  - Add verbose parameter.
+ - Fix test messages in clean_cover().
 
 0.04 2023-06-11T18:24:52+02:00
  - Add publication date use case.
